<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



    <EditText
        android:id = "@+id/nameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_input"
        app:layout_constraintBottom_toTopOf="@id/emailAddress"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/occupationField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/please_input_your_occupation"
        app:layout_constraintBottom_toTopOf="@id/descriptionField"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameField" />

    <EditText
        android:id="@+id/descriptionField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/please_input_a_description_of_yourself"
        app:layout_constraintBottom_toTopOf="@id/emailAddress"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/occupationField" />


    <EditText
        android:id = "@+id/emailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_address"
        app:layout_constraintBottom_toTopOf="@id/username"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descriptionField" />

    <Button
        android:id="@+id/dobButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_date_of_birth"
        android:onClick="onDobClick"
        app:layout_constraintBottom_toTopOf="@+id/submitButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        tools:ignore="OnClick" />

    <EditText
        android:id = "@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"
        app:layout_constraintBottom_toTopOf="@id/nameAndDate"
        app:layout_constraintLeft_toRightOf="@id/nameField"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailAddress" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/submit"
        android:onClick="onSubmit"
        app:layout_constraintBottom_toTopOf="@id/nameAndDate"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selectedDateOfBirth" />

    <TextView
        android:id="@+id/selectedDateOfBirth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/submitButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dobButton" />

    <TextView
        android:id ="@+id/nameAndDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/My_name_and_date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/username" />
</androidx.constraintlayout.widget.ConstraintLayout>