...
        android:layout_width="match_parent"
        android:layout_height="@dimen/threeTwenty"
        android:contentDescription="@string/the_picture_of_nature"
        android:src="@drawable/nature" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profilePicture"
        android:layout_marginStart="@dimen/twenty_five_dp"
        android:layout_marginTop="@dimen/ten_dp"
        android:text="@string/name"
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/descriptionField"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/thirty"
        android:layout_marginTop="@dimen/thirty"
...
