...
    <string name="hello_world">Hello World!</string>
    <string name="name_and_date">name_and_date</string>
    <string name="My_name_and_date">Dipendra, Shiwakoti 4/7/2022</string>
    <string name="name_input">Please enter your name</string>
    <string name="email_address">Please enter your email address</string>
    <string name="user_name">Please enter your user name</string>
    <string name="submit">SUBMIT</string>
    <string name="email_address_error">email address is not in the right format</string>
    <string name="Data_entry_error">You forgot to input some data on the form</string>
    <string name="signing_in_message">Thanks for signing up</string>
    <string name="signing_up">Thanks for signing up</string>
    <string name="forget_date_of_Birth">You forget to input the required field</string>
    <string name="back">back</string>
...
    <string name="Eighteen_years">You should be 18 years</string>
    <string name="Date_Of_birth">input date of birth</string>
    <string name="twenty_eight">28</string>
    <string name="profile">profile</string>
    <string name="matches">matches</string>
    <string name="settings">settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">close navigation drawer</string>
    <string name="Mark" />
    <string name="mark_t">mark_t</string>
    <string name="really_cool_guy">really_cool_guy</string>
    <string name="image_of_the_match">Image of the match</string>
    <string name="liked_message">You liked: %s</string>
...
